# reddyt

./: .dockerignore  .gitignore  .placeholder.env  Cargo.toml  Justfile  Makefile  Trunk.toml  makefile
.github/: FUNDING.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
backend/src/utils/: db.rs  mod.rs
cd/: dev.docker-compose.yml  dev.dockerfile
core/backend/: Cargo.toml  build.rs
core/backend/src/: main.rs
core/backend/src/models/: accounts.rs  mod.rs  oauth.rs  profile_overrides.rs  profile_stage_layers.rs  profile_stages.rs  profiles.rs  runs.rs  upload_platforms.rs  uploads.rs
core/backend/src/routes/: authentication.rs
core/backend/src/utils/: db.rs  mod.rs  text.rs
core/backend/src/utils/application/: configuration.rs  context.rs  environment.rs  errors.rs  mod.rs
core/backend/src/utils/errors/: mod.rs
core/backend/src/utils/extractors/: authentication.rs  mod.rs
core/frontend/: Cargo.toml  Trunk.toml  index.html
core/frontend/css/: index.scss
docker/: dev.docker-compose.yml  dev.dockerfile
frontend/: index.html
frontend/src/: app.rs
migrations/: 1_profiles.down.sql  1_profiles.up.sql  20250821003037_users.down.sql  20250821003037_users.up.sql  20250821003109_targets.down.sql  2_profile_overrides.down.sql  2_profile_overrides.up.sql  3_run_history.down.sql  3_run_history.up.sql  4_oauth_down.sql  4_oauth_up.sql  accounts.pg.hcl  oauth.pg.hcl  profile_overrides.pg.hcl  profile_stage_layers.pg.hcl  profile_stages.pg.hcl  profiles.pg.hcl  runs.pg.hcl  schema.hcl  upload_platforms.pg.hcl  uploads.pg.hcl
(+2 files in other folders)
