[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["cookies"] }
actix_failwrap = "1.0.3"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dyn_path = "1.0.7"
email_address = "0.2.9"
envconfig = "0.11.0"
flexi_logger = "0.31.2"
# Updating this is impossible as last version is broken.
jsonwebtoken = "=9.0.0"
log = "0.4.27"
rand = "0.9.2"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.16"

[build-dependencies]
dotenvy = "0.15.7"
